css fixes on mobile modal

--- a/css/layout.css
+++ b/css/layout.css
@@ -116,7 +116,7 @@ navbar {
 .modal-info-title:after {
   content: "";
   display: block;
-  width: 20%;
+  width: 200px;
   height: 1px;
   background-color: var(--violet);
 }
@@ -139,6 +139,14 @@ navbar {
 }
 .modal-info-dates {
   grid-template-columns: repeat(4, 1fr);
+}
+
+@media only screen and (max-width: 375px) {
+  .modal-info-dates {
+    grid-template-columns: repeat(3, 1fr);
+    font: 0.6rem sans-serif;
+    grid-gap: 5px;
+  }
 }
 
 .modal-header .btn-close {
